# libtorch-exam

./: CMakeLists.txt  example-app.cpp
